[package]
name = "random_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.16"
futures-util = "*"
futures-channel = "*"
futures = "*"
tokio = {version = "1", features = ["full"]}
tungstenite = "*"
chrono = "0.4.19"